# npTDMS

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  MANIFEST.in  README.rst  README.txt  build_docs.sh  coverage.sh  pyproject.toml  run_tests.sh  setup.cfg  setup.py  tox.ini  wercker.yml
.github/workflows/: ci-cd.yml
docs/: Makefile  apireference.rst  conf.py  index.rst  limitations.rst  quickstart.rst  reading.rst  tdmsinfo.rst  writing.rst
nptdms/: __init__.py  base_segment.py  channel_data.py  common.py  daqmx.py  data_store.py  log.py  reader.py  scaling.py  tdms.py  tdms_segment.py  tdmsinfo.py  thermocouples.py  timestamp.py  types.py  utils.py  value.py  version.py  writer.py
nptdms/export/: hdf_export.py  pandas_export.py
nptdms/test/: daqmx_test.py  pandas_test.py  scaling_test.py  scenarios.py  tdms_test.py  test_benchmarks.py  test_daqmx.py  test_example_files.py  test_hdf.py  test_pandas.py  test_scaling.py  test_tdms_file.py  test_tdmsinfo.py  test_thermocouples.py  test_timestamps.py  test_types.py  util.py  writer_test.py
nptdms/test/data/: Digital_Input.tdms  big_endian.tdms  raw1.tdms  raw_timestamps.tdms
nptdms/test/writer/: acceptance_tests.py  tdms_segment_tests.py  test_acceptance_tests.py  test_tdms_segment.py  test_writer.py
