[metadata]
name = npTDMS
version = 1.10.0
description = Cross-platform, NumPy based module for reading TDMS files produced by LabView
author = Adam Reeve
author_email = adreeve@gmail.com
url = https://github.com/adamreeve/npTDMS
long_description = file: README.rst
license = LGPL
classifiers =
  Development Status :: 5 - Production/Stable
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Scientific/Engineering
  License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
  Intended Audience :: Science/Research
  Natural Language :: English

[options]
packages =
    nptdms
    nptdms.export
    nptdms.test
install_requires =
    numpy

[options.entry_points]
console_scripts =
    tdmsinfo = nptdms.tdmsinfo:main

[options.extras_require]
test =
    pytest >= 3.1.0
    hypothesis
    pytest-benchmark
    thermocouples_reference
    scipy
pandas =
    pandas
    pyarrow
hdf =
    h5py >= 2.10.0
thermocouple_scaling =

